--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,23 @@ header {
     color: white;
     padding: 10px 0;
     text-align: center;
+    width: 100%;
 }
-
+nav{
+    width: 100%;
+    background-color: #007bffcd;
+    border: 1px solid white;
+    text-align: center;
+}
 nav ul {
     list-style-type: none;
     padding: 0;
 }
-
+.sticky{
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 nav ul li {
     display: inline;
     margin: 0 15px;
@@ -35,15 +45,20 @@ main {
 .products {
     display: flex;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
 }
 
 .product {
     border: 1px solid #dee2e6;
     padding: 20px;
     margin: 10px;
-    width:40%;
+    width:100%;
     background-color: white;
+}
+.product img{
+    width: 200px;
+    height: 170px;
 }
 
 footer {
@@ -52,8 +67,6 @@ footer {
     text-align: center;
     padding: 10px 0;
     width: 100%;
-    position: absolute;
-    bottom: 0px;
 }
 
 .popup {
@@ -111,4 +124,38 @@ footer {
 #product-video {
     width: 100%;
     margin-bottom: 10px;
+}
+.our-products{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.our-products p{
+    border: 1px solid #007bff;
+    background-color: #007bff;
+    color: white;
+    width: 180px;
+}
+.whatsapp a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    margin-top: 10px;
+    gap: 5px;
+}
+.whatsapp a i:first-child{
+    color: rgb(46, 237, 46);
+}
+@media (max-width:800px) {
+    .product{
+    width: 100%;
+    }
+    .products{
+        flex-direction: column;
+        margin: 0px 20px;
+    }
+    footer{
+        position: unset;
+    }
 }
