--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,18 @@ footer {
 h3{
     color: orangered;
 }
+.info{
+    text-align: left;
+    margin: 2px 0px;
+    color: orangered;
+}
+.info a{
+    color: #007bff;
+    text-decoration: none;
+}
+.info a:hover{
+    text-decoration: underline;
+}
 .sale-container{
     display: flex;
     align-items: flex-start;
@@ -243,6 +255,9 @@ h3{
     }
     .description p{
         margin: 0px 10px;
+    }
+    .info{
+        margin:5px 10px ;
     }
     footer{
         position: unset;
